<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        tools:context="com.example.centuratechnology.baheekhata.Main">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name"
                android:textAlignment="center"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til1"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til2"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til3"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tivl1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til4"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/til4"
                android:layout_marginBottom="350dp"
                android:background="@color/tvColor"
                android:text="@string/adress"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tivl1"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/til4"
                android:hint="@string/bulding_area"
                android:inputType="textPostalAddress"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til5"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/til5"
                android:hint="@string/city"
                android:inputType="text"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til6"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="text"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til7"
            android:background="#ffffff"
            android:textAlignment="center"
            android:textColorHint="@color/Blue">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zip_code"
                android:inputType="number"
                android:textColorHint="@color/Blue" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tivl2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til8">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/til4"
                android:layout_marginBottom="350dp"
                android:background="#FFEB3B"
                android:text="@string/referal_id_not_required_for_new_user"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tivl2"
            android:background="#ffffff"
            android:textAlignment="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/referal_id"
                android:inputType="number"
                android:textAlignment="center" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/til9"
            android:background="#80D8FF"
            android:paddingTop="10dp"
            android:textAlignment="center">


            <Button
                android:id="@+id/nextBut"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="0dp"
                android:background="@color/darkBlue"
                android:text="@string/next" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</ScrollView>